--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-# process.env.[VARIABLE_NAME]
+# to get actualized DB_URI look up for it on your mongodb atlas control panel. 
 
-# MongoDB Atlas URI
-# mongodb+srv://<username>:<password>@cluster0.33bjq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-PORT = 'F'
-DB_HOST='xd'
-DB_USER='lol'
-DB_PASS='hahahahaha'
+DB_URI=mongodb://<username>:<password>@ac-n0vtwgr-shard-00-00.jbhnvp9.mongodb.net:27017,ac-n0vtwgr-shard-00-01.jbhnvp9.mongodb.net:27017,ac-n0vtwgr-shard-00-02.jbhnvp9.mongodb.net:27017/?ssl=true&replicaSet=atlas-3pcj3j-shard-0&authSource=admin&retryWrites=true&w=majority
+DB_USER='username'
+DB_PASS='password'
