--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "eslint": "^7.24.0",
         "eslint-config-prettier": "^8.2.0",
@@ -29,6 +30,7 @@
         "@types/socket.io": "^2.1.13",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
+        "nodemon": "^2.0.20",
         "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
     }
