--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@hapi/boom": "^10.0.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "eslint": "^7.24.0",
         "eslint-config-prettier": "^8.2.0",
         "eslint-plugin-prettier": "^3.4.0",
         "express": "^4.17.1",
+        "joi": "^17.7.0",
         "mongoose": "^5.12.5",
         "multer": "^1.4.2",
         "prettier": "^2.2.1",
