--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "eslint-config-prettier": "^8.2.0",
         "eslint-plugin-prettier": "^3.4.0",
         "express": "^4.17.1",
+        "express-jwt": "^7.7.7",
+        "express-oauth2-jwt-bearer": "^1.3.0",
         "joi": "^17.7.0",
+        "jwks-rsa": "^3.0.0",
         "mongoose": "^5.12.5",
         "multer": "^1.4.2",
         "prettier": "^2.2.1",
