--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.17.1",
         "express-jwt": "^7.7.7",
         "express-oauth2-jwt-bearer": "^1.3.0",
+        "express-unless": "^2.1.3",
         "joi": "^17.7.0",
         "jwks-rsa": "^3.0.0",
         "mongoose": "^5.12.5",
