--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node dist/app.js",
-        "dev": "nodemon src/app.ts",
+        "test": "jest src/__tests__/*.ts",
+        "start": "node dist/index.js",
+        "dev": "nodemon src/index.ts",
         "build": "tsc -p ."
     },
     "keywords": [],
@@ -13,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "@hapi/boom": "^10.0.0",
+        "axios": "^1.2.1",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "eslint": "^7.24.0",
@@ -31,12 +33,18 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.11",
+        "@types/jest": "^29.2.4",
         "@types/multer": "^1.4.5",
         "@types/node": "^14.14.41",
+        "@types/request": "^2.48.8",
         "@types/socket.io": "^2.1.13",
+        "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
+        "jest": "^29.3.1",
         "nodemon": "^2.0.20",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.0.3",
         "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
     }
