--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "jest src/__tests__/*.ts",
         "start": "node dist/index.js",
         "dev": "nodemon src/index.ts",
-        "build": "tsc -p ."
+        "build": "tsc -p tsconfig.prod.json"
     },
     "keywords": [],
     "author": "",
